# MySetCpp

./: CMakeLists.txt  MySet.h  sub.txt  testy1.cpp
